--- a/src/main/resources/templates/userUpdate.html
+++ b/src/main/resources/templates/userUpdate.html
@@ -41,9 +41,13 @@
                         <a href="/libraries" class="nav-link px-0 align-middle text-light">
                             <i class="fs-4 bi-building"></i> <span class="ms-1 d-none d-sm-inline">Správa knihoven</span></a>
                     </li>
+                    <li sec:authorize="hasRole('ADMIN')">
+                        <a href=/library class="nav-link px-0 align-middle text-light">
+                            <i class="fs-4 bi-building"></i> <span class="ms-1 d-none d-sm-inline">Přidat knihovnu</span></a>
+                    </li>
                     <li sec:authorize="hasAnyRole('ADMIN', 'DISTRIBUTOR')">
                         <a href="/title" class="nav-link px-0 align-middle text-light">
-                            <i class="fs-4 bi-book"></i> <span class="ms-1 d-none d-sm-inline">Přidání titulu</span></a>
+                            <i class="fs-4 bi-book"></i> <span class="ms-1 d-none d-sm-inline">Přidat titul</span></a>
                     </li>
                     <li sec:authorize="hasAnyRole('ADMIN', 'LIBRARIAN', 'DISTRIBUTOR')">
                         <a href="/titles" class="nav-link px-0 align-middle text-light">
@@ -55,7 +59,7 @@
                     </li>
                     <li sec:authorize="hasAnyRole('ADMIN', 'LIBRARIAN', 'DISTRIBUTOR')">
                         <a href="/book" class="nav-link px-0 align-middle text-light">
-                            <i class="fs-4 bi-book"></i> <span class="ms-1 d-none d-sm-inline">Přidání knihy</span></a>
+                            <i class="fs-4 bi-book"></i> <span class="ms-1 d-none d-sm-inline">Přidat knihu</span></a>
                     </li>
                     <li sec:authorize="hasRole('ADMIN')">
                         <a href="/users" class="nav-link px-0 align-middle text-light">
@@ -98,7 +102,6 @@
                 <h2 class="fw-bold mb-4 text-uppercase text-center">Uživatel</h2>
                 <form id="userForm" th:action="@{/userUpdate}" method="POST" th:object="${user}">
                     <div sec:authorize="hasRole('ADMIN')">
-                        <input type="hidden" class="form-control" placeholder="Id" th:value="${user.id}" th:field="*{id}">
                         <label for="name" class="form-label mt-2">Jméno</label>
                         <input type="text" class="form-control" id="name" th:name="name" th:value="${user.name}"/>
                         <label for="surname" class="form-label mt-2">Příjmení</label>
@@ -122,7 +125,6 @@
                         <input class="form-control btn btn-primary my-3" type="submit" value="Odeslat"/>
                     </div>
                     <div sec:authorize="!hasRole('ADMIN')">
-                        <input disabled type="hidden" class="form-control" placeholder="Id" th:value="${user.id}" th:field="*{id}">
                         <label for="name" class="form-label mt-2">Jméno</label>
                         <input disabled type="text" class="form-control" th:name="name" th:value="${user.name}"/>
                         <label for="surname" class="form-label mt-2">Příjmení</label>
