--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -26,7 +26,7 @@
                 <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
                     <li sec:authorize="isAnonymous()">
                         <a href="/login" class="nav-link px-0 align-middle text-light">
-                            <i class="fs-4 bi-unlock"></i> <span class="ms-1 d-none d-sm-inline">Přihlášní</span></a>
+                            <i class="fs-4 bi-unlock"></i> <span class="ms-1 d-none d-sm-inline">Přihlášení</span></a>
                     </li>
                     <li sec:authorize="isAnonymous()">
                         <a href="/register" class="nav-link px-0 align-middle text-light">
@@ -81,8 +81,9 @@
         </div>
         <div class="container mx-auto col-auto col-lg-4 col-md-6 col-sm-7 row align-items-center">
             <div class="container bg-light rounded p-3">
+                    <p th:if= "${message != ''}" th:text="${message}"></p>
                     <h2 class="fw-bold mb-4 text-uppercase text-center">Příhlášení</h2>
-                    <form th:action="@{/login}" method="POST">
+                    <form th:action="@{/login}" method="POST" onsubmit="">
                         <label for="username" class="form-label">Jméno</label>
                         <input type="text" id="username" name="username" class="form-control" th:name="username"/>
                         <label for="username" class="form-label">Heslo</label>
