--- a/src/main/resources/templates/reservation_summary.html
+++ b/src/main/resources/templates/reservation_summary.html
@@ -26,7 +26,7 @@
                 <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
                     <li sec:authorize="isAnonymous()">
                         <a href="/login" class="nav-link px-0 align-middle text-light">
-                            <i class="fs-4 bi-unlock"></i> <span class="ms-1 d-none d-sm-inline">Přihlášní</span></a>
+                            <i class="fs-4 bi-unlock"></i> <span class="ms-1 d-none d-sm-inline">Přihlášení</span></a>
                     </li>
                     <li class="nav-item">
                         <a href="/" class="nav-link px-0 align-middle text-light">
@@ -109,7 +109,9 @@
                             <a th:if="${reservation.extendPossible == true}" th:href="@{/reservationExtend(reservation_id=${reservation.id})}">
                                 <button class="btn btn-primary">Prodloužit</button>
                             </a>
-
+                            <a th:href="@{/reservations/delete(reservation_id=${reservation.id})}">
+                                <button class="btn btn-danger">Zrušit</button>
+                            </a>
                             <button th:if="${reservation.extendPossible == false}" class="btn btn-warning" disabled>Nelze prodloužit</button>
                         </td>
                     </tr>
