--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -20,6 +20,7 @@
     <div class="row flex-nowrap">
         <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
             <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
+            <div class="position-fixed nav flex-column min-vh-100 bg-dark">
                 <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
                     <span class="fs-5 d-none d-sm-inline">Menu</span>
                 </a>
@@ -66,7 +67,6 @@
                             <i class="fs-4 bi-journal-check"></i> <span class="ms-1 d-none d-sm-inline">Výpůjčky</span></a>
                     </li>
                 </ul>
-                <hr>
                 <div class="dropdown pb-4" sec:authorize="isAuthenticated()">
                     <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="fs-4 bi-person-circle"></i>
@@ -87,6 +87,7 @@
                         <li><a class="dropdown-item" href="/logout">Odhlášení</a></li>
                     </ul>
                 </div>
+            </div>
             </div>
         </div>
         <div class="container mx-auto col-auto col-lg-4 col-md-6 col-sm-7 row align-items-center">
