--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -20,6 +20,7 @@
     <div class="row flex-nowrap">
         <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
             <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100">
+            <div class="position-fixed nav flex-column min-vh-100 bg-dark">
                 <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
                     <span class="fs-5 d-none d-sm-inline">Menu</span>
                 </a>
@@ -81,8 +82,7 @@
                             <i class="fs-4 bi-person-plus"></i> <span class="ms-1 d-none d-sm-inline">Přidat autora</span></a>
                     </li>
                 </ul>
-                <hr>
-                <div class="dropdown pb-4" sec:authorize="isAuthenticated()">
+                <div class="dropdown pb-4 align-items-end" sec:authorize="isAuthenticated()">
                     <a href="#" class="d-flex align-items-center text-white text-decoration-none dropdown-toggle" id="dropdownUser1" data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="fs-4 bi-person-circle"></i>
                         <span class="d-none d-sm-inline mx-1" sec:authentication="name"></span>
@@ -102,6 +102,7 @@
                         <li><a class="dropdown-item" href="/logout">Odhlášení</a></li>
                     </ul>
                 </div>
+            </div>
             </div>
         </div>
         <div class="col-auto col-xl-10 col-md-9 col-sm-9 col-10">
