--- a/src/main/resources/templates/author.html
+++ b/src/main/resources/templates/author.html
@@ -105,10 +105,11 @@
       <div class="container bg-light rounded p-3">
         <h2 class="fw-bold mb-4 text-uppercase text-center">Autor</h2>
         <form id="userForm" th:action="@{/author}" method="POST" th:object="${author}">
+          <input type="hidden" th:name="id" th:value="${author.id}"/>
           <label for="name" class="form-label mt-2">Jméno</label>
-          <input type="text" class="form-control" id="name" th:name="name" th:value="${author.name}"/>
+          <input type="text" class="form-control" id="name" th:name="name" th:value="${author.name}" maxlength="50" required/>
           <label for="surname" class="form-label mt-2">Příjmení</label>
-          <input type="text" class="form-control" id="surname" th:name="surname" th:value="${author.surname}"/>
+          <input type="text" class="form-control" id="surname" th:name="surname" th:value="${author.surname}" maxlength="100" required/>
           <input class="form-control btn btn-primary my-3" type="submit" value="Odeslat"/>
         </form>
       </div>
