--- a/src/main/resources/templates/library.html
+++ b/src/main/resources/templates/library.html
@@ -101,45 +101,46 @@
             <div class="container bg-light rounded p-3">
                 <h2 class="fw-bold mb-4 text-uppercase text-center">Knihovna</h2>
                 <form th:action="@{/library}" method="POST" th:object="${library}" class="row g-2">
+                        <input type="hidden" th:name="id" th:value="${library.id}"/>
                         <div class="col-6">
                             <label class="form-check-label" for="name">Název</label>
                             <input type="text" class="form-control" id="name" th:name="name"
-                                    th:value="${library.name}" th:field="*{name}"/>
+                                    th:value="${library.name}" th:field="*{name}" maxlength="50" required/>
                         </div>
                         <div class="col-6">
                             <label class="form-check-label" for="tag">Tag</label>
                             <input type="text" class="form-control" id="tag" th:name="tag"
-                                   th:value="${library.tag}" th:field="*{tag}"/>
+                                   th:value="${library.tag}" th:field="*{tag}" maxlength="5" required/>
                         </div>
                         <div class="col-6">
                             <label class="form-check-label" for="city">Město</label>
                             <input type="text" class="form-control" id="city" th:name="city"
-                                   th:value="${library.city}" th:field="*{city}"/>
+                                   th:value="${library.city}" th:field="*{city}" maxlength="50" required/>
                         </div>
                         <div class="col-6">
                             <label class="form-check-label" for="street">Ulice</label>
                             <input type="text" class="form-control" id="street" th:name="street"
-                                   th:value="${library.street}" th:field="*{street}"/>
+                                   th:value="${library.street}" th:field="*{street}" maxlength="255" required/>
                         </div>
                         <div class="col-6">
                             <label class="form-check-label" for="street_number">Číslo popisné</label>
                             <input type="text" class="form-control" id="street_number" th:name="street_number"
-                                   th:value="${library.streetNumber}" th:field="*{streetNumber}"/>
+                                   th:value="${library.streetNumber}" th:field="*{streetNumber}" maxlength="20" required/>
                         </div>
                         <div class="col-6">
                             <label class="form-check-label" for="from_time">Od</label>
                             <input type="time" class="form-control" id="from_time" th:name="from_time"
-                                   th:value="${library.openFrom}" th:field="*{openFrom}"/>
+                                   th:value="${library.openFrom}" th:field="*{openFrom}" required/>
                         </div>
                         <div class="col-6">
                             <label class="form-check-label" for="to_time">Do</label>
                             <input type="time" class="form-control" id="to_time" th:name="to_time"
-                                   th:value="${library.openTo}" th:field="*{openTo}"/>
+                                   th:value="${library.openTo}" th:field="*{openTo}" required/>
                         </div>
                         <div class="col-12">
                             <label class="form-check-label" for="description">Popis</label>
                             <input type="textarea" class="form-control" id="description" th:name="description"
-                                   th:value="${library.description}" th:field="*{description}"/>
+                                   th:value="${library.description}" th:field="*{description}" maxlength="255" required/>
                         </div>
                         <div class="col-6 my-3">
                             <input class="form-control btn btn-secondary" type="submit" value="Odeslat"/>
